--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
   <div class="container">
     <h1>🚄 ShinkaBot (Shinkansen Buddy Helper)</h1>
+    <div class="language-selector">
+        <button onclick="setLanguage('en')">🇺🇸 English</button>
+        <button onclick="setLanguage('es')">🇪🇸 Español</button>
+        <button onclick="setLanguage('jp')">🇯🇵 日本語</button>
+    </div>
+
     <div id="chat-box"></div>
 
     <div class="input-area">
