--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <p>
         If you find this helpful, consider supporting:
         <a href="https://paypal.me/yourusername" target="_blank">PayPal</a> |
-        <a href="https://ko-fi.com/yourusername" target="_blank">Ko-fi</a> |
-        <a href="https://buymeacoffee.com/yourusername" target="_blank">Buy Me a Coffee</a>
+        <a href="https://ko-fi.com/karura_carlis" target="_blank">Ko-fi</a> |
       </p>
       <p>Follow us: 
         <a href="https://instagram.com/karura_carlis" target="_blank">Instagram</a>
