--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper">
+    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150">
     <h1>🚄 ShinkaBot (Shinkansen Buddy Helper)</h1>
 
     <div class="language-selector">
