--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
     </div>
 
     <div class="disclaimer">
-      <h3>Disclaimer / Aviso Legal / 免責事項</h3>
-      <p><strong>EN:</strong> This chatbot is an independent tool and is not affiliated with JR. Please check official JR websites for bookings.</p>
-      <p><strong>ES:</strong> Este chatbot no está afiliado a JR. Consulta los sitios oficiales de JR para comprar boletos y horarios.</p>
-      <p><strong>JP:</strong> このチャットボットはJRとは関係ありません。公式ウェブサイトをご確認ください。</p>
+       <h2>Aviso Legal / Legal Notice / 免責事項</h2>
+      <p><strong>ES 🇪🇸:</strong> Este chatbot <strong>ShinkaBot</strong>es un proyecto independiente creado por su autora con fines educativos y turísticos. Se trata de una herramienta independiente que no está afiliada ni representa al Grupo JR ni a ningún organismo oficial de transporte de Japón. Consulte los sitios web oficiales de JR para realizar reservas.</p>
+      <p><strong>EN 🇬🇧:</strong> The <strong>ShinkaBot</strong> is an independent project created for educational and touristic purposes. It is an independent tool and is not affiliated with or endorsed by JR Group or any official transport organization in Japan. Please check official JR websites for bookings.</p>
+      <p><strong>JP 🇯🇵:</strong> 本チャットボット<strong>ShinkaBot</strong>は、教育および観光を目的として作成された独立したプロジェクトです。JRグループや日本の公的交通機関とは無関係であり、これらを代表するものでもありません。
+      ご予約はJR公式サイトを確認してご参照ください。</p>
     </div>
+    
   </div>
 
   <script src="chatbot.js"></script>
+  <footer style="background-color: #f4f4f4; padding: 2rem; font-family: sans-serif; font-size: 0.95rem; color: #333; border-top: 1px solid #ccc;">
+    <p style="margin-top: 1rem;">© 2025 ShinkaBot. All rights reserved.</p>
+  </footer>
 </body>
 </html>
