--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150">
+    <img src="SHINKABOT LOGO largo.jpg" alt="Shinkansen Buddy Helper"width="400" height="150">
     <h1>🚄 ShinkaBot (Shinkansen Buddy Helper)</h1>
 
     <div class="language-selector">
