--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150">
-    <img src="SHINKABOT LOGO largo.png" alt="Shinkansen"width="300" height="150">
-    <h1>🚄 ShinkaBot (Shinkansen Buddy Helper)</h1>
-
+    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150"> <h1>🚄 ShinkaBot (Shinkansen Buddy Helper)</h1>
+    
     <div class="language-selector">
       <button onclick="setLanguage('en')">🇺🇸 English</button>
       <button onclick="setLanguage('es')">🇪🇸 Español</button>
