--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="SHINKANBOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150"> <h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1>
+    <img src="SHINKANBOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150"> 
+    <h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1>
     
     <div class="language-selector">
       <button onclick="setLanguage('en')">🇺🇸 English</button>
