--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="SHINKANBOT LOGO1.png" alt="Shinkansen Buddy Helper"width="150" height="150"> 
+    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper logo"width="150" height="150"> 
     <h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1>
     
     <div class="language-selector">
