--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <footer style="background-color: black; padding: 2rem; font-family: sans-serif; font-size: 0.95rem; color: white; border-top: 1px solid #ccc;">
     <div class="disclaimer">
        <h2>Aviso Legal / Legal Notice / 免責事項</h2>
-      <p><strong>ES 🇪🇸:</strong> Este chatbot <strong>ShinkanBot</strong> es un proyecto independiente creado por su autora con fines educativos y turísticos. Se trata de una herramienta independiente que no está afiliada ni representa al Grupo JR ni a ningún organismo oficial de transporte de Japón. Consulte los sitios web oficiales de JR para realizar reservas.</p>
-      <p><strong>EN 🇬🇧:</strong> The <strong>ShinkanBot</strong> is an independent project created for educational and touristic purposes. It is an independent tool and is not affiliated with or endorsed by JR Group or any official transport organization in Japan. Please check official JR websites for bookings.</p>
-      <p><strong>JP 🇯🇵:</strong> 本チャットボット<strong>ShinkanBot</strong> は、教育および観光を目的として作成された独立したプロジェクトです。JRグループや日本の公的交通機関とは無関係であり、これらを代表するものでもありません。
+      <p><strong>🇪🇸:</strong> Este chatbot <strong>ShinkanBot</strong> es un proyecto independiente creado por su autora con fines educativos y turísticos. Se trata de una herramienta independiente que no está afiliada ni representa al Grupo JR ni a ningún organismo oficial de transporte de Japón. Consulte los sitios web oficiales de JR para realizar reservas.</p>
+      <p><strong>EN:</strong> The <strong>ShinkanBot</strong> is an independent project created for educational and touristic purposes. It is an independent tool and is not affiliated with or endorsed by JR Group or any official transport organization in Japan. Please check official JR websites for bookings.</p>
+      <p><strong>🇯🇵:</strong> 本チャットボット<strong>ShinkanBot</strong> は、教育および観光を目的として作成された独立したプロジェクトです。JRグループや日本の公的交通機関とは無関係であり、これらを代表するものでもありません。
       ご予約はJR公式サイトを確認してご参照ください。</p>
     </div>
     <p style="margin-center: 1rem;">© 2025 ShinkanBot. All rights reserved.</p>
