--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper logo"width="150" height="150"> 
-    <h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1>
+    <ul>
+    <li><img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper logo"width="150" height="150"></li> 
+    <li><h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1></li>
+    </ul>
     
     <div class="language-selector">
       <button onclick="setLanguage('en')">🇺🇸 English</button>
