--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <ul>
     <li><img src="SHINKABOT LOGO1.png" alt="Shinkansen Buddy Helper logo"width="150" height="150"></li> 
-    <li><h1>🚄 ShinkanBot (Shinkansen Buddy Helper)</h1></li>
+    <li><h1>🚄 ShinkanBot<br>(Shinkansen Buddy Helper)</h1></li>
     </ul>
     
     <div class="language-selector">
