--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
     </div>
     <p style="margin-center: 1rem;">© 2025 ShinkanBot. All rights reserved.</p>
   </footer>
+<div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY"></script>
 </body>
 </html>
