--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     <p style="margin-center: 1rem;">© 2025 ShinkanBot. All rights reserved.</p>
   </footer>
 <div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk"></script>
 </body>
 </html>
