--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
 
     <!--para buscar en mapa-->
     <p id="ask-text">Enter a city or region to find the nearest Shinkansen station:</p>
-
-      <input type="text" id="cityInput" placeholder="e.g. Osaka, Nagano">
+    <div style="position: relative;">
+      <input type="text" id="cityInput" placeholder="e.g. Osaka, Nagano" oninput="showSuggestions()" autocomplete="off" />
+      <ul id="suggestions" style="position: absolute; background: white; border: 1px solid #ccc; width: 100%; max-height: 150px; overflow-y: auto; display: none; z-index: 100;"></ul>
+    </div>
       <button onclick="findStation()">🔍</button>
       
-    <div id="response"></div>
-<!--para buscar en mapa-->
+    <div id="response" style="margin-top: 1rem; font-weight: bold;"></div>
+    <div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk"></script>
+ 
+    <!--para buscar en mapa-->
 
     <div class="donations">
       <h3>💖 Support ShinkanBot</h3>
@@ -49,8 +54,7 @@
   </div>
 
   <script src="chatbot.js"></script>
-  <div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk"></script>
+
   <footer style="background-color: black; padding: 2rem; font-family: sans-serif; font-size: 0.95rem; color: white; border-top: 1px solid #ccc;">
     <div class="disclaimer">
        <h2>Aviso Legal / Legal Notice / 免責事項</h2>
