--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul id="suggestions" style="position: absolute; background: white; border: 1px solid #ccc; width: 100%; max-height: 150px; overflow-y: auto; display: none; z-index: 100;"></ul>
     </div>
       <button onclick="findStation()">🔍</button>
-      
+      <button onclick="findNearestByGeo()">📍 Usar mi ubicación</button>
     <div id="response" style="margin-top: 1rem; font-weight: bold;"></div>
     <div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk"></script>
