--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <h3>💖 Support ShinkanBot</h3>
       <p>
         If you find this helpful, consider supporting:
-        <a href="https://paypal.me/shumpeimasuda" target="_blank">PayPal</a> |
+        <!--protegerlo-->
+       <!-- <a href="https://paypal.me/shumpeimasuda" target="_blank">PayPal</a> |-->
+        <!--protegerlo-->
         <a href="https://ko-fi.com/karura_carlis/tip" target="_blank">Ko-fi</a> |
       </p>
       <p>Follow us: 
