--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       <button onclick="findNearestByGeo()">📍 Usar mi ubicación</button>
     <div id="response" style="margin-top: 1rem; font-weight: bold;"></div>
     <div id="map" style="width: 100%; height: 300px; margin-top:1rem;"></div>
-     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk&callback=initMap" async defer></script>
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEEYBiEqVo2i-TkkxEIHLeztzkMW0Eozk&callback=initMap"
+       async
+       defer
+      ></script>
  
     <!--para buscar en mapa-->
 
